--- a/pC/subtasks.json
+++ b/pC/subtasks.json
@@ -1,19 +1,47 @@
 {
     "global_validators": [
-        "validator.cpp"
+        "task4_val.cpp"
     ],
     "subtasks": {
         "samples": {
             "index": 0,
             "score": 0,
             "text": "範例輸入輸出",
-            "validators": []
+            "validators": [
+                "task4_val.cpp"
+            ]
         },
-        "full": {
+        "task1": {
             "index": 1,
             "score": 100,
+            "text": "$1 \\leq n \\leq 7$",
+            "validators": [
+                "task1_val.cpp"
+            ]
+        },
+        "task2": {
+            "index": 2,
+            "score": 100,
+            "text": "$\\forall \\; 1 \\leq i \\leq n, \\; a_i=i$",
+            "validators": [
+                "task2_val.cpp"
+            ]
+        },
+        "task3": {
+            "index": 3,
+            "score": 100,
+            "text": "$1 \\leq n \\leq 1000$",
+            "validators": [
+                "task3_val.cpp"
+            ]
+        },
+        "task4": {
+            "index": 4,
+            "score": 100,
             "text": "無額外限制",
-            "validators": []
+            "validators": [
+                "task4_val.cpp"
+            ]
         }
     }
 }
