Add pB,C subtask

--- a/pB/subtasks.json
+++ b/pB/subtasks.json
@@ -13,15 +13,15 @@
         },
         "task1": {
             "index": 1,
-            "score": 100,
-            "text": "$\\forall \\; 1 \\leq i \\leq 2n, \\; a_i$ 皆為奇數或皆為偶數",
+            "score": 30,
+            "text": "$\\forall 1 \\leq i \\leq 2n, a_i$ 皆為奇數或皆為偶數",
             "validators": [
                 "task1_val.cpp"
             ]
         },
         "task2": {
             "index": 2,
-            "score": 100,
+            "score": 70,
             "text": "無額外限制",
             "validators": [
                 "task2_val.cpp"
