--- a/pG/subtasks.json
+++ b/pG/subtasks.json
@@ -1,5 +1,6 @@
 {
     "global_validators": [
+        "validator.cpp"
     ],
     "subtasks": {
         "samples": {
@@ -13,7 +14,7 @@
             "score": 17,
             "text": "$w=1$",
             "validators": []
-        },        
+        },
         "tree": {
             "index": 2,
             "score": 10,
@@ -25,7 +26,7 @@
             "score": 23,
             "text": "$n \\le 1000$",
             "validators": []
-        },        
+        },
         "full": {
             "index": 4,
             "score": 50,
