--- a/pE/subtasks.json
+++ b/pE/subtasks.json
@@ -12,21 +12,21 @@
         "task1": {
             "index": 1,
             "score": 9,
-            "text": "$2 \\le n,m,q \\le 10^2$",
+            "text": "$2 \\le n,~m,~q \\le 10^2$",
             "validators": []
-        },        
+        },
         "task2": {
             "index": 2,
             "score": 16,
-            "text": "$2 \\le n,m \\le 10^3$",
+            "text": "$2 \\le n,~m \\le 10^3$",
             "validators": []
         },
         "task3": {
             "index": 3,
             "score": 39,
-            "text": "$q=1$，詢問在左上和右下",
+            "text": "$q = 1$，詢問在左上和右下",
             "validators": []
-        },        
+        },
         "task4": {
             "index": 4,
             "score": 36,
